# experimaestro-demo

./: .gitignore  .gitmodules  .pre-commit-config.yaml  ADVANCED.md  README.md  Task.py  experiment.py  install_settings.sh  params.yaml  pyproject.toml  requirements.txt  xpm_settings.yaml
.github/workflows/: ci.yml
mnist_xp/: analyze.py  data.py  draw_dag.py  experiment.py  fake_data.py  learn.py  params-ci.yaml  params.yaml  tensorboard_service.py
mnist_xp_advanced/: actions.py  analyze.py  draw_dag.py  experiment.py  learn.py  params.yaml
tests/: fake_mnist.py  params-ci.yaml  test_demo.py
tests/xpm-config/: launchers.py
