[project]
name = "experimaestro-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datamaestro>=1.6.1",
    "experimaestro>=2.0.0b1",
    "pandas>=2.2.3",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]

[tool.mypy]
plugins = ["experimaestro.mypy"]

